# Projekt---Grafika-3d

./: .gitignore  CMakeLists.txt  resources.qrc
src/: main.cpp
src/cuda/: brightness.cu  brightness.cuh  cartoon.cu  cartoon.cuh  contrast.cu  contrast.cuh  gaussianblur.cu  gaussianblur.cuh  grayscale.cuh  greyscale.cu  negative.cu  negative.cuh  sepia.cu  sepia.cuh  sobel.cu  sobel.cuh
src/header files/: ControlBar.h  MainWindow.h  ToolBar.h  VideoWindow.h
src/opencv/header files/: SenderOpenCV.h
src/opencv/source files/: SenderOpenCV.cpp
src/source files/: ControlBar.cpp  MainWindow.cpp  ToolBar.cpp  VideoWindow.cpp
